[package]
name = "protobuf-parser"
version = "0.1.3"
description = "A nom-based parser for .proto files"
authors = ["Ari Seyhun <ariseyhun@live.com.au>", "Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tafia/protobuf-parser"

[dependencies]
nom = "4.0"
nom_locate = "0.3"